--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Volumes/macOS Data/home/naxdy/Downloads/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/Volumes/macOS Data/home/naxdy/Downloads/junit-4.12.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/Volumes/macOS%20Data/home/naxdy/Downloads/junit-4.12-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path=""/>
 </classpath>
